tests/snapshots/examples_fixtures/diagnostics__Modules__Data__List.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/Modules/Data/List.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.Data.Other` doesn't match file path `examples/diagnostics/Modules/Data/List.flx`.

  examples/diagnostics/Modules/Data/List.flx:4:1
  |
4 | module Modules.Data.Other {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
